# tp_c-cpp_homework1

./: .gitignore  .gitignore.swo  .gitignore.swp  .travis  .travis.yml  CMakeLists.txt  README.md
DZ2/: .travis.yml  CMakeLists.txt
DZ2/linters/: run.sh
DZ2/project/headers/: utils.h  utils_parall.h  utils_synch.h
DZ2/project/src/: functions.c  functions_parall.c  functions_synch.c  main.c  main.cpp
DZ2/tests/: create_matrix  example4x4  example5x6  main.cpp  script.sh  test.cpp
linters/: run.sh
project/: diet.h  functions.c  library.h  main.c  main.cpp
